# ariadne-template

./: .env_example  pyproject.toml
app/: main.py
app/api/: __init__.py  mutation.py  query.py  scalars.py
app/api/schema/: enums.graphql  inputs.graphql  mutations.graphql  queries.graphql  results.graphql  types.graphql
app/core/: config.py  db.py  filestorage.py  models.py
